<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.cloudbus.cloudsim</groupId>
  <artifactId>cloudsim-package</artifactId>
  <version>5.0</version>
  <packaging>pom</packaging>
  <name>cloudsim-package</name>
  <description>CloudSim: A Framework For Modeling And Simulation Of Cloud Computing Infrastructures And Services</description>
  <url>http://www.cloudbus.org/cloudsim/</url>
  
  <properties>
  	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
  
  <modules>
  	<module>modules</module>
  	<module>documentation</module>
  	<module>distribution</module>
  </modules>
  
  <organization>
  	<name>The Cloud Computing and Distributed Systems (CLOUDS) Laboratory, The University of Melbourne</name>
  	<url>http://cloudbus.org/</url>
  </organization>
  
  <build>
  	<pluginManagement>
  		<plugins>
  			<plugin>
  				<groupId>org.apache.maven.plugins</groupId>
  				<artifactId>maven-compiler-plugin</artifactId>
  				<version>3.8.0</version>
  				<configuration>
					<release>11</release>
					<compilerArgs>
						<arg>-XDcompilePolicy=simple</arg>
						<arg>-Xplugin:ErrorProne</arg>
					</compilerArgs>
					<annotationProcessorPaths>
						<path>
							<groupId>com.google.errorprone</groupId>
							<artifactId>error_prone_core</artifactId>
							<version>2.4.0</version>
						</path>
					</annotationProcessorPaths>
  				</configuration>
  			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>3.3.0</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.2.0</version>
				<configuration>
					<maxmemory>2048</maxmemory>
					<additionalparam>-Xdoclint:none</additionalparam>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>3.0.0-M3</version>
				<executions>
					<execution>
						<id>enforce-maven</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireMavenVersion>
									<version>3.1.0</version>
								</requireMavenVersion>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>
  		</plugins>
  	</pluginManagement>
  </build>  
  
  <distributionManagement>
	<repository>
		<id>localrepo</id>
		<name>LocalRepository</name>
		<url>file:///${project.build.directory}/deployment-artifacts</url>
	</repository>
  </distributionManagement> 
  
  <dependencyManagement>
  	<dependencies>
  		<dependency>
  			<groupId>${project.groupId}</groupId>
  			<artifactId>modules</artifactId>
  			<version>${project.version}</version>
  		</dependency>
  		<dependency>
  			<groupId>${project.groupId}</groupId>
  			<artifactId>cloudsim</artifactId>
  			<version>${project.version}</version>
  		</dependency>
  		<dependency>
  			<groupId>${project.groupId}</groupId>
  			<artifactId>cloudsim-examples</artifactId>
  			<version>${project.version}</version>
  		</dependency>
  		<dependency>
  			<groupId>${project.groupId}</groupId>
  			<artifactId>documentation</artifactId>
  			<version>${project.version}</version>
  		</dependency>
  		<dependency>
  			<groupId>${project.groupId}</groupId>
  			<artifactId>distribution</artifactId>
  			<version>${project.version}</version>
  		</dependency>
  		
  		<dependency>
  			<groupId>junit</groupId>
  			<artifactId>junit</artifactId>
  			<version>4.13</version>
  			<scope>test</scope>
  		</dependency>
		<dependency>
			<groupId>org.easymock</groupId>
			<artifactId>easymock</artifactId>
			<version>4.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.easymock</groupId>
			<artifactId>easymockclassextension</artifactId>
			<version>3.2</version>
			<scope>test</scope>
		</dependency>  		  		
  	</dependencies>
  </dependencyManagement>
    
</project>
